--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -90,13 +90,13 @@ if(WIN32)
         endif()
     endif()
 else()
-    if(NOT SC_ARCH_NAME)
-        if((CMAKE_SYSTEM_PROCESSOR MATCHES "AMD64") OR (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64"))
-            set(SC_ARCH_NAME "x64")
-        else()
-            set(SC_ARCH_NAME "x86")
-        endif()
-    endif()
+    # if(NOT SC_ARCH_NAME)
+    #     if((CMAKE_SYSTEM_PROCESSOR MATCHES "AMD64") OR (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64"))
+    #         set(SC_ARCH_NAME "x64")
+    #     else()
+    #         set(SC_ARCH_NAME "x86")
+    #     endif()
+    # endif()
 endif()
 
 add_subdirectory(Source)
