--- a/Source/CMakeLists.txt
+++ b/Source/CMakeLists.txt
@@ -54,9 +54,9 @@ else()
 	foreach(flagVar
 		CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
 		set(${flagVar} "${${flagVar}} -W -Wall -Werror")
-		if(NOT (ANDROID OR IOS))
-			set(${flagVar} "${${flagVar}} -march=core2 -msse2")
-		endif()
+		# if(NOT (ANDROID OR IOS))
+		# 	set(${flagVar} "${${flagVar}} -march=core2 -msse2")
+		# endif()
 	endforeach()
 	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-missing-field-initializers")
 	if(MINGW)
@@ -70,29 +70,29 @@ else()
 	set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "-DNDEBUG -g -O2")
 	set(CMAKE_CXX_FLAGS_MINSIZEREL "-DNDEBUG -Os")
 
-	if(NOT SC_ARCH_NAME)
-		if((CMAKE_SYSTEM_PROCESSOR MATCHES "AMD64") OR (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64"))
-			set(SC_ARCH_NAME "x64")
-		else()
-			set(SC_ARCH_NAME "x86")
-		endif()
-	endif()
+	# if(NOT SC_ARCH_NAME)
+	# 	if((CMAKE_SYSTEM_PROCESSOR MATCHES "AMD64") OR (CMAKE_SYSTEM_PROCESSOR MATCHES "x86_64"))
+	# 		set(SC_ARCH_NAME "x64")
+	# 	else()
+	# 		set(SC_ARCH_NAME "x86")
+	# 	endif()
+	# endif()
 
 	if(SC_ARCH_NAME STREQUAL "x64")
 		foreach(flagVar
 			CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
-			set(${flagVar} "${${flagVar}} -m64")
+			# set(${flagVar} "${${flagVar}} -m64")
 		endforeach()
 		if(NOT MSVC)
 			foreach(flagVar
 				CMAKE_SHARED_LINKER_FLAGS CMAKE_MODULE_LINKER_FLAGS CMAKE_EXE_LINKER_FLAGS)
-				set(${flagVar} "${${flagVar}} -m64")
+				# set(${flagVar} "${${flagVar}} -m64")
 			endforeach()
-			if(WIN32)
-				set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} --target=pe-x86-64")
-			else()
-				set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} --target=elf64-x86-64")
-			endif()
+			# if(WIN32)
+			# 	set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} --target=pe-x86-64")
+			# else()
+			# 	set(CMAKE_RC_FLAGS "${CMAKE_RC_FLAGS} --target=elf64-x86-64")
+			# endif()
 		endif()
 	else()
 		foreach(flagVar
